# Agent-logger

./: .gitignore  QUICKSTART_CODEX.md  README.md  pyproject.toml
agent_logger/: authz_cases.py  canonicalize.py  claude_adapter.py  cli.py  codex_adapter.py  codex_monitor.py  codex_rollout.py  context.py  ids.py  launcher.py  openclaw_adapter.py  proxy.py  redaction.py  render.py  schema.py  store.py  subagents.py
docs/: USAGE.md
tests/: test_authz_cases.py  test_canonicalize.py  test_claude_adapter.py  test_codex_adapter.py  test_codex_monitor.py  test_codex_rollout.py  test_context.py  test_openclaw_adapter.py  test_proxy.py  test_render.py  test_store.py
